--- a/Projeto01/web/index.html
+++ b/Projeto01/web/index.html
@@ -9,8 +9,12 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
     </head>
     <body>
+        
         <div>TODO write content</div>
+        <h1><a href= juros-simples.html> Juros Simples </a></h1>
+        <h1><a href= juros-composto.html> Juros Composto </a></h1>
     </body>
 </html>
