Servlet do juros composto feito por Lucas M. Garcia

--- a/Projeto01/web/juros-composto.html
+++ b/Projeto01/web/juros-composto.html
@@ -24,10 +24,10 @@ and open the template in the editor.
 </body>
 <h1>Cálculo de Juros Compostos</h1>
 <div style='float:left; margin-right: 200px;'>
-<form>
-<p>Capital: <input required type='number' min='0' name='c' step='0.01'> 
+<form action="juros_composto.html">
+<p>Capital: <input required type='number' min='0' name='C' step='0.01'> 
 <p>Taxa de Juros (% ao mês): <input required type='number' min='0' name='i' step='0.01'> 
-<p>Tempo total (meses): <input required type='number' min='1' name='t' step='0.01'>
+<p>Tempo total (meses): <input required type='number' min='1' name='n' step='0.01'>
 <p><input required type='submit' value='Calcular'></p>
 </form>
 <h3 style='color:red'>Preencha os campos corretamente!</h3>
